# smol

./: README.md  setup.sh
e2e/cfgs/: blaze-base.yaml  gen_blaze_cfgs.py  gen_noscope_cfgs.py  gen_single_im_cfgs.py  im-single-full-base.yaml  vid-base.yaml
e2e/cfgs/model-only/: rn18-cpy.yaml  rn18-nocpy.yaml  rn34-cpy.yaml  rn34-nocpy.yaml  rn50-cpy.yaml  rn50-nocpy.yaml
e2e/cfgs/preproc-ablation/: full-naive-all.yaml  full-naive-decode-only.yaml  full-naive-decode-resize-norm.yaml  full-naive-decode-resize.yaml
e2e/runner/: runner.py  video_runner.py
e2e/trt/: CMakeLists.txt  cmake.sh  runner.cc  video_runner.cc
e2e/trt/include/: calibrator.h  common.h  criterion.h  cropper.h  data_loader.h  experiment_server.h  inference_server.h  io_helper.h  pixel_format.h  video_data_loader.h  video_decoder.h  video_experiment_server.h
e2e/trt/src/: criterion.cc  data_loader.cc  experiment_server.cc  inference_server.cc  io_helper.cc  naive_data_loader.cc  png_data_loader.cc  spng.cc  video_data_loader.cc  video_decoder.cc  video_experiment_server.cc
scripts/: custom_resnets.py  export_resnet_torchvision.py  resizeIms.py
scripts/benchmark/: benchmark_keras.py  benchmark_pyt.py
scripts/scripts/: convert_cmyk.sh  export_onnx_all.sh  reencode.sh  resize_all.sh
